refactore for sonarLight